[package]
name = "nano-wal"
version = "0.1.1"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A simple, lightweight Write-Ahead Log (WAL) implementation for append-only operations"
documentation = "https://docs.rs/nano-wal"
homepage = "https://github.com/yourusername/nano-wal"
repository = "https://github.com/yourusername/nano-wal"
license = "MIT"
keywords = ["wal", "write-ahead-log", "persistence", "database", "storage"]
categories = ["database-implementations", "data-structures", "filesystem"]
readme = "README.md"
exclude = [
    "test_wal*",
    "*.marker",
    "target/",
]

[dependencies]
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"
